--- a/MvcMovie/src/MvcMovie/Views/Home/About.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Home/About.cshtml
@@ -2,6 +2,42 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<h3>Welcome to MyBillBuddy.</h3>    
+
+<p>
+    I wanted an easy way to see how much money I would have in-between paycheques.<br />
+    I used an array of "free" apps that would charge a premium for recurring bills.<br />
+    And I resorted to using a complicated and clunky spreadsheet.<br />
+    I hope you can get some use and a financial sense of grounding and peace of mind.<br />
+    <br />
+    Currently. When you enter an expense or income, it goes 6 months out.<br />
+    I'll work on a 'refresh' option, or we can auto refresh it, I don't know.<br />
+    wsbarth92@gmail.com if you have suggestions.<br />
+    <br />
+    I didn't want "another budget app", it's useless to know targets, because they always fluctuate.<br />
+    Sometimes I'd blow over my grocery budget, or something would come up. This setup gives me the ability to see how much I'll have in the bank and a sense of what I can "play with" either in stocks, forex, gambling, lotto, beers, or taking my wife out for a nice dinner ... you get the idea :)<br />
+    <br />
+    It's just a tool, and it's free, and if you really want something I can look into making it so.<br />
+    <br />
+    Enjoy.
+</p>
+<br />
+<br />
+<h4>How To / FAQ:</h4>
+<p>
+    MyBillBuddy will hopefully help you realize how much money you will have between pay periods.<br />
+    Once you register an account, you can add expenses and incomes, on a recurring basis, or one-time-only.<br />
+    Once you add these entries in, if you enter a recurring one, it will go 6 months in the future.<br />
+    <br />
+    *note, we will work on something to deal with "well what happens in 6 months"*<br />
+    <br />
+    Expenses will have red money text, incomes will be normal, or green, what do you think?<br />
+    Enter in your starting balance, aka what is in your bank right now.<br />
+    From there, enter in your weekly/biweekly/monthly pay.<br />
+    After, start entering those pesky weekly/biweekly/monthly/yearly ... etc expenses.<br />
+    MyBillBuddy will take a look at all bills between now and your next payday.<br />
+    It will determine how much money you will have between what you have in the bank, plus what bills are in the pipeline.<br />
+    This will tell you at the top, with a quick and easy glance, how much money you have to go out for lunch with they guys, to the movies with your snuggums, or pick up that fantastic steam sale.<br />
+    Life is all about making smart decisions, so let us help you make things just a bit easier.<br />
+</p>
