--- a/MvcMovie/src/MvcMovie/Views/Manage/SetPassword.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Manage/SetPassword.cshtml
@@ -4,8 +4,8 @@
 }
 
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    You do not have a username/password for this site. Add an account
+    so you can log in.
 </p>
 
 <form asp-controller="Manage" asp-action="SetPassword" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
