og meta tagging

--- a/MvcMovie/src/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Shared/_Layout.cshtml
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="MyBillBuddy" />
+    <meta property="og:type" content="Financial Bill Billing Aid" />
+    <meta property="og:url" content="http://wsbarth.com" />
+    <meta property="og:description" content="MyBillBuddy helps manage your expenses and can tell you how much money
+          you will have between now and your next payday, all while keeping your expenses taken care of." />
     <title>@ViewData["Title"] - MyBillBuddy</title>
 
     <environment names="Development">
