fixed one time transactions, refactor a bit of enum and handling of logic in index home

--- a/MvcMovie/src/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.description)
                 </td>
-                <td class="@(item.transType == MvcMovie.Data.enumTransType.Expense || item.transType == MvcMovie.Data.enumTransType.OneTimeExpense ? "text-danger" : "")">
+                <td class="@(item.transType == MvcMovie.Data.enumTransType.Expense ? "text-danger" : "")">
                     @Html.DisplayFor(modelItem => item.value)
                 </td>
                 <td>
